Fix sort visible on mobile display

--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -58,9 +58,3 @@
     }
   }
 }
-
-@media screen and (max-width: 768px) {
-  .sort {
-    display: none;
-  }
-}
